Fix alignment on info section

--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
     background-color: #1F2937
 }
 
+.two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .three {
     display: flex;
     flex-direction: column;
